[gd_scene load_steps=31 format=3 uid="uid://c1exb7f5de312"]

[ext_resource type="Script" uid="uid://dekop5582hrgc" path="res://new_enemy/new_enemy.gd" id="1_4k456"]
[ext_resource type="Texture2D" uid="uid://b8qhnlm5mlpwk" path="res://vfx/Pixel Art Animations - Warrior (FREE)/VFX 1/sprite-sheet.png" id="2_gih4w"]
[ext_resource type="Texture2D" uid="uid://da4cuf2n8aqcd" path="res://vfx/Yellow Effect Bullet Impact Explosion 32x32.png" id="3_qidur"]
[ext_resource type="AudioStream" uid="uid://ucgue5dgv8vd" path="res://sfx/sword-clash-241729.mp3" id="4_tjl11"]
[ext_resource type="FontFile" uid="uid://bcy22jv5sfuot" path="res://fonts/ofont.ru_Serati.ttf" id="5_5e5l2"]
[ext_resource type="Texture2D" uid="uid://coxhmc13kvicv" path="res://new_enemy/sprites/Maple Tree.png" id="6_gih4w"]

[sub_resource type="Animation" id="Animation_gih4w"]
resource_name = "burn"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.03137255, -0.083333336, 0.16143791, 0, 0, 1, -0.083333336, -0.16143791, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.02745098, -0.083333336, 0.16209151, 0, 0, 1, -0.083333336, -0.16209151, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_qidur"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_tjl11"]
resource_name = "stun"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.5176471, -0.083333336, 0.08039215, 0, 0, 1, -0.083333336, -0.08039215, 0, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.3529412, -0.083333336, 0.107843146, 0, 0, 1, -0.083333336, -0.107843146, 0, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 1, 2)
}

[sub_resource type="Animation" id="Animation_5e5l2"]
resource_name = "weak"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 5.5085006, -0.083333336, -0.7514168, 0, 0, 1, -0.083333336, 0.7514168, 0, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 5.5085006, -0.083333336, -0.7514168, 0, 0, 1, -0.083333336, 0.7514168, 0, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 5.5085006, -0.083333336, -0.7514168, 0, 0, 1, -0.083333336, 0.7514168, 0, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 1, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5e5l2"]
_data = {
&"RESET": SubResource("Animation_qidur"),
&"burn": SubResource("Animation_gih4w"),
&"stun": SubResource("Animation_tjl11"),
&"weak": SubResource("Animation_5e5l2")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("2_gih4w")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("2_gih4w")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("2_gih4w")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("2_gih4w")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("2_gih4w")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("2_gih4w")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("2_gih4w")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("2_gih4w")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("2_gih4w")
region = Rect2(0, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("2_gih4w")
region = Rect2(128, 512, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_hl6u0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}],
"loop": false,
"name": &"swing",
"speed": 14.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1wwld"]
atlas = ExtResource("3_qidur")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5vj3"]
atlas = ExtResource("3_qidur")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ffra"]
atlas = ExtResource("3_qidur")
region = Rect2(256, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e355f"]
atlas = ExtResource("3_qidur")
region = Rect2(288, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_l5cd4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wwld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5vj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ffra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e355f")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_g6k8r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75, 0)]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "moving_number"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(75, 0), Vector2(75, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgyib"]
_data = {
&"RESET": SubResource("Animation_g6k8r"),
&"moving_number": SubResource("Animation_boad6")
}

[node name="new_enemy" type="Node2D"]
script = ExtResource("1_4k456")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(50.999996, 18.999998)
scale = Vector2(10, 10)
texture = ExtResource("6_gih4w")

[node name="effects" type="AnimationPlayer" parent="sprite"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_5e5l2")
}

[node name="swing_animation" type="AnimatedSprite2D" parent="."]
z_index = 1
z_as_relative = false
position = Vector2(-700, 21)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_hl6u0")
animation = &"swing"

[node name="death_animation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(70, 21)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_l5cd4")
animation = &"death"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tjl11")
volume_db = -10.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -65.0
offset_top = -45.0
offset_right = 185.0
offset_bottom = 80.0

[node name="label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -20.0
offset_right = 72.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/paragraph_spacing = 2
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_5e5l2")
theme_override_font_sizes/font_size = 40
text = "ВРАГ"
horizontal_alignment = 1

[node name="health_label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -30.0
offset_right = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/paragraph_spacing = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_5e5l2")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="damage_lable" type="Label" parent="Control"]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.94036186, 5.3425133e-06, 3.85046e-07, 1)
theme_override_constants/paragraph_spacing = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_5e5l2")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/damage_lable"]
libraries = {
&"": SubResource("AnimationLibrary_rgyib")
}
